<resources>
    <string name="app_name">Art</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="field_list">field_list</string>
    <string name="creative_field">Creative Field</string>
    <string name="country_switch">Country  Switch</string>
    <string name="country_switch_title">Display arts only on my country</string>
    <string name="country_switch_summary">Get list of arts and project that is made on your country</string>
    <string name="sort_list">sort_list</string>
    <string name="sort_list_title">Sort By</string>
    <string name="country_code">country_code_key</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="cover_image">The main project image</string>
    <string name="likes">likes</string>
    <string name="views">views</string>
    <string name="artist_img">Artist Personal Image</string>
    <string name="bookmark">bookmark</string>
    <string name="settings">Settings</string>
    <string name="art">ART</string>
    <string name="module_images">a module image that is part of the project</string>
    <string name="project_img">project_image</string>
    <string name="wrong_image_format">Image src is on wrong format</string>
    <string name="jpg">jpg</string>
    <string name="png">png</string>
    <string name="collections">Collections</string>
    <string name="first_visible_item_postion">rec_view_position</string>
</resources>
