<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
   >

   <TextView
       android:id="@+id/empty_state_widget"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:textSize="@dimen/major_title_font_size"
       android:textColor="@color/textColorPrimary"
       android:textStyle="bold|italic"
       android:fontFamily="serif"
       android:text="@string/art"
       android:gravity="center"
       />



<RelativeLayout
    android:id="@+id/widget_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    >
 <ImageView
     android:id="@+id/cover_img_widget"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:scaleType="centerCrop"
     app:srcCompat="@android:drawable/btn_star"
     android:contentDescription="@string/cover_image" />

 <TextView
     android:id="@+id/project_name_text_h2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentStart="true"
     android:layout_below="@+id/cover_img_widget"
     android:fontFamily="sans-serif"
     android:padding="@dimen/dp16_marign"
     android:textColor="@color/textColorPrimary"
     android:textSize="@dimen/sub_title_font_size" />

 <TextView
     android:id="@+id/creative_fields_txt"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignStart="@+id/project_name_text_h2"
     android:layout_below="@+id/project_name_text_h2"
     android:fontFamily="sans-serif"
     android:textColor="@color/textColorPrimary"
     android:textSize="@dimen/sub_title_font_size"
     android:padding="@dimen/dp16_marign"
     />




 <ImageView
     android:id="@+id/imageButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignStart="@+id/project_name_text_h2"
     android:layout_below="@+id/creative_fields_txt"
     android:paddingBottom="12dp"
     android:paddingEnd="12dp"
     android:paddingLeft="12dp"
     android:paddingRight="12dp"
     android:paddingStart="12dp"
     android:paddingTop="12dp"
     android:src="@drawable/like"
     android:contentDescription="@string/likes" />

 <TextView
     android:id="@+id/likes_txt"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/creative_fields_txt"
     android:layout_toRightOf="@+id/imageButton"
     android:fontFamily="sans-serif"
     android:padding="16dp"
     android:paddingHorizontal="4dp"
     android:textColor="@color/textColorPrimary"
     android:textSize="14sp"
     tools:text="300" />

 <ImageView
     android:id="@+id/imageButton2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/creative_fields_txt"
     android:layout_toRightOf="@+id/likes_txt"
     android:padding="12dp"
     android:src="@drawable/eye"
     android:contentDescription="@string/views" />

 <TextView
     android:id="@+id/views_txt"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/creative_fields_txt"
     android:layout_toRightOf="@+id/imageButton2"
     android:fontFamily="sans-serif"
     android:padding="16dp"
     android:paddingHorizontal="4dp"
     android:textColor="@color/textColorPrimary"
     android:textSize="14sp"
     tools:text="15021" />




</RelativeLayout>

</FrameLayout>