<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.detail.Details">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="Art Details"
            />



        <ImageView
            android:id="@+id/artist_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp24_margin"
            android:layout_marginTop="@dimen/dp8_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@android:drawable/ic_delete"
            android:contentDescription="@string/artist_img" />

        <TextView
            android:id="@+id/artist_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp24_margin"
            android:layout_marginTop="@dimen/dp8_margin"
            android:fontFamily="serif"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/artist_name_text_size"
            app:layout_constraintStart_toEndOf="@+id/artist_img"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_margin="@dimen/dp16_marign"
            android:layout_marginEnd="@dimen/dp8_margin"
            android:layout_marginStart="@dimen/dp8_margin"
            android:background="@color/divider_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2"
            />

        <TextView
            android:id="@+id/project_name_text_h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16_marign"
            android:layout_marginTop="@dimen/dp8_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artist_img"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_normal"
            android:fontFamily="sans-serif"

            />

        <TextView
            android:id="@+id/creative_fields_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16_marign"
            android:layout_marginTop="@dimen/dp8_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/project_name_text_h2"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            />

        <View
            android:id="@+id/divider2"
            android:layout_width="@dimen/divider_width"
            android:layout_height="@dimen/divider_height"
            android:layout_margin="@dimen/dp16_marign"
            android:layout_marginStart="@dimen/dp8_margin"
            android:layout_marginTop="@dimen/dp8_margin"
            android:background="@color/divider_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/creative_fields_txt" />

        <ImageView
            android:id="@+id/likes_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/likes"
            android:paddingBottom="@dimen/dp16_marign"
            android:paddingEnd="@dimen/dp16_marign"
            android:paddingLeft="@dimen/dp16_marign"
            android:paddingRight="@dimen/dp16_marign"
            android:paddingStart="@dimen/dp16_marign"
            android:paddingTop="@dimen/dp16_marign"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <TextView
            android:id="@+id/likes_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp24_margin"
            android:layout_marginTop="@dimen/dp44_margin_top"
            android:paddingHorizontal="@dimen/dp4_padding"
            app:layout_constraintStart_toEndOf="@+id/likes_image"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            tools:text="300"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/normal_font_size"
            android:fontFamily="sans-serif"
            />

        <ImageView
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16_marign"
            android:layout_marginTop="@dimen/dp24_margin"
            android:padding="@dimen/dp16_marign"
            android:src="@drawable/eye"
            app:layout_constraintStart_toEndOf="@+id/likes_txt"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            android:contentDescription="@string/views" />

        <TextView
            android:id="@+id/views_txt"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp24_margin"
            android:layout_marginTop="@dimen/dp44_margin_top"
            android:paddingHorizontal="@dimen/dp4_padding"
            app:layout_constraintStart_toEndOf="@+id/imageButton2"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            tools:text="15021"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/normal_font_size"
            android:fontFamily="sans-serif"
            />

        <TextView
            android:id="@+id/project_name_txt_h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp8_margin"
            android:layout_marginStart="@dimen/dp8_margin"
            android:layout_marginTop="@dimen/dp24_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/sub_title_font_size"
            android:fontFamily="serif"
            android:textStyle="bold"
            />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp8_margin"
            android:layout_marginStart="@dimen/dp8_margin"
            android:layout_marginTop="@dimen/dp16_marign"
            app:contentPadding="@dimen/dp16_marign"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/project_name_txt_h1">

            <TextView
                android:id="@+id/project_description_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="Description"
                android:textSize="@dimen/normal_font_size"
                android:textColor="@color/textColorPrimary"
                android:fontFamily="sans-serif"
                />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/modules_rec_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8_margin"
            android:layout_marginEnd="@dimen/dp8_margin"
            android:layout_marginStart="@dimen/dp8_margin"
            android:layout_marginTop="@dimen/dp8_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            android:nestedScrollingEnabled="true"
            tools:listitem="@layout/list_item_module_txt"
            android:transitionName="@string/project_img"
            />

        <ImageButton
            android:id="@+id/book_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp32_margin"
            android:layout_marginTop="@dimen/dp24_margin"
            android:background="#00000000"
            android:padding="@dimen/dp16_marign"
            android:src="@drawable/bookmark"
            app:layout_constraintStart_toEndOf="@+id/views_txt"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            android:contentDescription="@string/bookmark" />

        <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Large.ChasingDots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp8_margin"
            android:layout_marginEnd="@dimen/dp8_margin"
            android:layout_marginStart="@dimen/dp8_margin"
            android:layout_marginTop="@dimen/dp8_margin"
            app:SpinKit_Color="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
